@startuml


interface Subject
interface Observer

class ConcreteSubject
class ConcreteObserver

interface Subject{
    +void registerObserver(Observer)
    +void removeObserver(Observer)
    +void notifyObserver()
}

note "for all o in observers{o-> update }" as n1
Subject  .. n1

interface Observer{
    +void update()
}

Subject <|--ConcreteSubject

Observer <|-- ConcreteObserver

Subject "1" --> "n" Observer
ConcreteSubject--> ConcreteObserver



@enduml